--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-streamlit==1.28.0
-pandas==2.0.3
-numpy==1.24.3
-plotly==5.15.0
-joblib==1.3.0
-scikit-learn==1.3.0
-requests==2.31.0
 mega.py==1.0.3
+gdown==5.2.0
+joblib==1.3.0
