--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-requests==2.31.0
+streamlit==1.28.0
+pandas==2.0.3
+numpy==1.24.3
+plotly==5.15.0
 joblib==1.3.0
-tqdm==4.65.0
+scikit-learn==1.3.0
+gdown==5.2.0
