--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+setuptools>=65.0.0
 streamlit==1.28.0
 pandas==2.0.3
 numpy==1.24.4
@@ -5,4 +6,5 @@ plotly==5.18.0
 joblib==1.3.2
 scikit-learn==1.2.2
 gdown==5.1.0
+
 
