--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-setuptools>=65.0.0
+setuptools>=68.0
+wheel>=0.40.0
+pip>=25.3
+
 streamlit==1.28.0
 pandas==1.5.3
-numpy==1.26.3
+numpy==1.25.2
 plotly==5.18.0
 joblib==1.3.2
 scikit-learn==1.8.0
