--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+# Build tools
+pip>=25.3
 setuptools>=68.0
 wheel>=0.40.0
-pip>=25.3
 
+# App dependencies
 streamlit==1.28.0
 pandas==1.5.3
 numpy==1.25.2
