--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
 numpy==2.2.2
-pandas==2.1.1
-scikit-learn==1.3.2
+scikit-learn==1.8.0
 joblib==1.3.2
-streamlit==1.28.0
+pandas==2.1.1
+streamlit==1.26.0
 plotly==6.0.0
 gdown==4.7.1
+python-dateutil>=2.8.2
+pytz>=2020.1
+tzdata>=2022.1
+scipy>=1.10.0
+threadpoolctl>=3.2.0
+altair<6,>=4.0
+blinker<2,>=1.0.0
+cachetools<6,>=4.0
+click<9,>=7.0
+importlib-metadata<7,>=1.4
